syntax = "proto3";
message LOAD {
  enum loadType{
    ACLOAD = 0;
	DCLOAD = 1;
	HVAC_HEAT = 2;
	WATER_HEAT = 3;
	COLD = 4;
  }
  optional string time = 2;
  optional double load = 3;
}
message ELECTRICITY_PRICE{
  optional string time = 1;
  optional double price = 2;
}
message 
message ENERGY_FROM_GRID{
  enum energyType {
    ELECTRICITY = 0;
    HEAT = 1;
	}
  optional string time = 1;
  optional double power = 2;
}
message INVERTER_POWER{
  enum status {
    TO_AC = 0;
	TO_DC = 1;
}
  optional string time = 0;
  optional double power = 1; 
}
message ELECTRIC_STORAGE{
  enum status{
  CHARGE = 0;
  DISCHARGE = 1;
  }
  optional string name = 0;
  optional string time = 1;
  optional double power = 2;
  optional double SOC = 3;
}
message GAS_TURBINE{
  enum status{
  ON = 0;
  OFF = 1;
}
  optional string name = 0;
  optional string time = 1;
  optional double power = 2;
  optional double heat = 3;
  optional double heat_recycle = 4;
 }
 
message PV{
  optional string name = 0;
  optional double power = 1;
 }

message AIR_CONDITIONER{
  optional string name = 0;
  optional double power = 1;
}
message ICE_STORAGE{
  optional status{
  CHARGE = 0;
  DISCHARGE = 1;
  }
  optional string name = 0
  optional double power = 1;
  optional double cold_of_tank = 2;
  optional double cold_of_chill = 3;
  optional double SOC = 4;
}
message ABS_CHILLER{
  optional string name = 0;
  optional double heat = 1;
}
message HEAT{
  optional quality{
  HIGH = 0;
  MEDIUM = 1;
  LOW = 2;
  }
  optional double heat = 0;
}  
message RESULT{
  optional double objective = 0;
  optional double cpu_time = 1;
  optional string solver = 2;
  }